--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html style="background-color: black;"><head><meta charset="utf-8"/><title>christine</title><link rel="icon" href="/favicon.png"></head><body><div id="cover"></div><script src="/main.677797fc57c722c6f929.js"></script></body><script></script></html>
+<!doctype html><html style="background-color: black;"><head><meta charset="utf-8"/><title>christine</title><link rel="icon" href="/heart1.png"></head><body><div id="cover"></div><script src="/main.05193574254150c101c1.js"></script></body><script></script></html>
