--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html style="background-color: black;"><head><meta charset="utf-8"/><title>christine</title><link rel="icon" href="/heart1.png"></head><body><div id="cover"></div><script src="/main.1366c96d09b6aad95387.js"></script></body><script></script></html>
+<!doctype html><html style="background-color: black;"><head><meta charset="utf-8"/><title>christine</title><link rel="icon" href="/christinekwon.github.io/favicon.png"></head><body><div id="cover"></div><script src="/christinekwon.github.io/main.43ac2155fa9f3bc676ea.js"></script></body><script></script></html>
